--- a/Fekrah/API/ClientApp/src/app/core/features/home/car-brands/car-brands.component.html
+++ b/Fekrah/API/ClientApp/src/app/core/features/home/car-brands/car-brands.component.html
@@ -1,6 +1,6 @@
 <div class="brand-section">
-  <h2>أختر موديل السيارة</h2>
-  <div class="swiper" >
+  <h2 class="section-title">أختر موديل السيارة</h2>
+  <div class="swiper">
     <div class="swiper-wrapper">
       <div class="swiper-slide" *ngFor="let brand of carBrands">
         <div class="brand-card" [routerLink]="['/parts/brand', brand.id]">
@@ -12,8 +12,8 @@
       </div>
 
     </div>
-    <div class="swiper-pagination"></div>
-    <div class="swiper-button-prev"></div>
-    <div class="swiper-button-next"></div>
+    <!-- <div class="swiper-pagination"></div> -->
+    <!-- <div class="swiper-button-prev"></div>
+    <div class="swiper-button-next"></div> -->
   </div>
 </div>
