--- a/Fekrah/API/ClientApp/src/app/dashboard/statistics/statistics.component.html
+++ b/Fekrah/API/ClientApp/src/app/dashboard/statistics/statistics.component.html
@@ -20,9 +20,9 @@
         <i class="fas fa-sync-alt"></i>
         تحديث
       </button>
-      <button class="btn btn-close" (click)="onClose()" title="إغلاق">
+      <!-- <button class="btn btn-close" (click)="onClose()" title="إغلاق">
         <i class="fas fa-times"></i>
-      </button>
+      </button> -->
     </div>
   </div>
 
